読書メモ機能のエンドポイントの修正
