# src/api/api/reading-memos/index.ts
@@ -6,13 +6,13 @@ export type Methods = DefineMethods<{
   get: {
     status: 200;
     /** Reading-memos are fetched */
-    resBody: Types.Lending_log[];
+    resBody: Types.Reading_memo[];
   };
 
   post: {
     status: 201;
     /** Reading-memo is created */
-    resBody: Types.Lending_log_create_body;
-    reqBody: Types.Lending_log_create_body;
+    resBody: Types.Reading_memo_create_body;
+    reqBody: Types.Reading_memo_create_body;
   };
 }>;
